# twitter-like-app

./: .gitignore  docker-compose.yml
behave_testing/: Dockerfile  pyproject.toml
behave_testing/features/: posts_creation.feature  posts_information.feature  users_creation.feature  users_following_actions.feature  users_information.feature
behave_testing/features/steps/: posts_actions.py  users_actions.py
post_manager/: Dockerfile  pyproject.toml
post_manager/src/api/: main.py
post_manager/src/api/requests/: post_request.py
post_manager/src/exceptions/: user_define_execptions.py
post_manager/src/service/: post_service.py
user_manager/: Dockerfile  pyproject.toml
user_manager/src/api/: main.py
user_manager/src/api/requests/: user_request.py
user_manager/src/exceptions/: user_define_execptions.py
user_manager/src/service/: user_service.py
